# icloud_reingest

./: README.md  TODO.md  pyproject.toml
report/: icloud_image_report.csv  icloud_video_report.csv
src/: evaluate_duplicates.py  evaluate_image_files.py  evaluate_video_files.py  process_duplicates.py  process_image_files.py  process_video_files.py  replace_archived_video_files.py  utils.py
